tests/neg/lists/list-03.ts
/*@ hop :: (#List[{v:number| 0 < v}]?) => #List[{v:number| 10 < v}]? */
function hop(xs){
  
  return xs;
}

